--- a/Plugins/3rdParty/MSHtmlEditorControl/Properties/Resources.resx
+++ b/Plugins/3rdParty/MSHtmlEditorControl/Properties/Resources.resx
@@ -166,8 +166,8 @@
   <data name="ToolbarUndo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarUndo.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ToolbarFontColor" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ToolbarFontColor.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ToolbarTextColor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToolbarTextColor.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ToolbarLine" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarLine.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
